--- a/music_player_frontend/src/App.css
+++ b/music_player_frontend/src/App.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: 'Aptos';
+  src: url('/fonts/aptos/Aptos-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Aptos';
+  src: url('/fonts/aptos/Aptos-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+body, html, #root {
+  font-family: 'Aptos', Arial, sans-serif;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
